# intel_ros

./: .gitignore  CMakeLists.txt  README.md  intel_ros.props  intel_ros.sln  manifest.xml  package.xml  ros.props  winclean.bat
VoiceRecognition/: ReadMe.txt  VoiceRecognition.cpp  VoiceRecognition.h  VoiceRecognition.vcxproj  VoiceRecognition.vcxproj.filters  VoiceRecognitionNode.cpp  stdafx.cpp
VoiceSynthesis/: ReadMe.txt  VoiceSynthesis.cpp  VoiceSynthesis.h  VoiceSynthesis.vcxproj  VoiceSynthesis.vcxproj.filters  VoiceSynthesisNode.cpp  stdafx.cpp
common/: PXCUtility.cpp  PXCUtility.h  RosSpeaker.h  VoiceCommands.h  commands.csv  utility.h
gesture_recognition/: MyGestureRecognition.cpp  MyGestureRecognition.h  ReadMe.txt  gesture_recognition.cpp  gesture_recognition.vcxproj  gesture_recognition.vcxproj.filters  stdafx.cpp
include/: commands.csv
intel_ros/: ReadMe.txt  intel_ros.cpp  intel_ros.vcxproj  intel_ros.vcxproj.filters  stdafx.cpp
launch/: cmd_center.launch  gesture_recognition.launch  intel_ros.launch  rgbd_collector.launch  vel_center.launch  voice_rec.launch  voice_recognition.launch  voice_synthesis.launch
msg/: TwistWithMask.msg
nodes/: cmd_center.cpp  vel_center.cpp
rgbd_collector/: ReadMe.txt  rgbd_collector.cpp  rgbd_collector.vcxproj  rgbd_collector.vcxproj.filters  stdafx.cpp
src/: csvparser.cpp
test/: test.cpp  test.vcxproj  test.vcxproj.filters
voice_recognition/: MyVoiceRecognition.cpp  MyVoiceRecognition.h  ReadMe.txt  VoiceCommands.h  rosspeaker.cpp  stdafx.cpp  voice_recognition.vcxproj  voice_recognition.vcxproj.filters
voice_synthesis/: MyVoiceSynthesis.cpp  MyVoiceSynthesis.h  ReadMe.txt  stdafx.cpp  voice_synthesis.cpp  voice_synthesis.vcxproj  voice_synthesis.vcxproj.filters
