<?xml version="1.0"?>
<package>
  <name>intel_ros</name>
  <version>0.1.0</version>
  <description>

     intel_ros

  </description>
  <maintainer email="yuanboshe@gmail.com">XPS 12</maintainer>
  <author>XPS 12</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

</package>
